# Full-Stack-Todo-App

Back-end/todo_app/: .env  pyproject.toml
Back-end/todo_app/app/: auth.py  main.py
Back-end/todo_app/app/config/: db.py
Back-end/todo_app/app/models/: todos.py
Back-end/todo_app/app/router/: user.py
Front-end/todo-app/: actions.ts  package-lock.json  package.json  type.d.ts
Front-end/todo-app/app/: actions.ts  globals.css  layout.tsx  page.tsx
Front-end/todo-app/components/: AddTask.tsx  EditTask.tsx  Modal.tsx  SubmitButton.tsx  Task.tsx  TodoTable.tsx
